Fix vertical alignment, align with forgot password box, add changelog

--- a/frontend/components/StackedWhiteBoxes/_styles.scss
+++ b/frontend/components/StackedWhiteBoxes/_styles.scss
@@ -21,7 +21,7 @@
     min-height: 360px;
     box-sizing: border-box;
     padding: $pad-xxlarge;
-    font-weight: 300;
+    font-weight: $regular;
     position: relative;
 
     &-text {
